新增：pic-small-float > 4 小塊 填入資料
- 變更 將 .date 設定 block，便於控制.date 的 padding-top & padding-bottom

--- a/marathon/pic-small-float.html
+++ b/marathon/pic-small-float.html
@@ -34,7 +34,10 @@
     .text-area .bold, .text-area .date{
       padding: 10px 0;
     }
-    
+    .date{
+      display: block;
+    }
+
 
   </style>
 </head>
@@ -49,6 +52,51 @@
         <!-- 點擊文字區 -->
         <div class="text-area">
           <p class="bold">「E Ulu A Paʻa」～ビショップ ミュージアム が年に一度のファンドレイジングを開催！～</p>
+          <p class="thin">
+            <span class="date">2022/08/12</span>
+          </p>
+        </div>
+      </a>
+    </div>
+
+    <div class="small-box">
+      <a class="container" href="#">
+        <p class="icon-title">海</p>
+        <!-- 點擊圖片區 -->
+        <img src="asset 31.jpeg" alt="">
+        <!-- 點擊文字區 -->
+        <div class="text-area">
+          <p class="bold">Sustainable Coastlines Hawai‘i x Lanai TRANSIT HAWAII 共にハワイの海を守る活動を開始</p>
+          <p class="thin">
+            <span class="date">2021/08/24</span>
+          </p>
+        </div>
+      </a>
+    </div>
+
+    <div class="small-box">
+      <a class="container" href="#">
+        <p class="icon-title">海</p>
+        <!-- 點擊圖片區 -->
+        <img src="asset 32.jpeg" alt="">
+        <!-- 點擊文字區 -->
+        <div class="text-area">
+          <p class="bold">『世界海洋デー』とは～豊かな海の環境を守ろう～</p>
+          <p class="thin">
+            <span class="date">2022/08/08</span>
+          </p>
+        </div>
+      </a>
+    </div>
+
+    <div class="small-box">
+      <a class="container" href="#">
+        <p class="icon-title">カルチャー</p>
+        <!-- 點擊圖片區 -->
+        <img src="asset 33.jpeg" alt="">
+        <!-- 點擊文字區 -->
+        <div class="text-area">
+          <p class="bold">POW! WOW! x ハワイアン航空　限定ロゴグッズ販売の収益が子供たちへの教育サポートに</p>
           <p class="thin">
             <span class="date">2022/08/12</span>
           </p>
