變更：pic-small-float > container width 設定
- 點擊區一併變動 width

--- a/marathon/pic-small-float.html
+++ b/marathon/pic-small-float.html
@@ -19,16 +19,16 @@
     }
     .container{
       display: block;
-      width: 474px;
+      width: 100%;
       text-decoration: none;
     }
     .container img{
-      width: calc(50% - 10px);
+      width: 100%;
       padding: 10px 0;
       vertical-align: middle;
     }
     .container .text-area {
-      width: calc(50% - 10px);
+      width: 100%;
       background-color: #ccc;
     }
     .text-area .bold, .text-area .date{
@@ -55,8 +55,8 @@
 </head>
 <body>
   <div class="wrap">
-    <!-- 點擊區 -->
     <div class="small-box">
+    <!-- 點擊區 -->
       <a class="container" href="#">
         <p class="icon-title">文化</p>
         <!-- 點擊圖片區 -->
@@ -72,6 +72,7 @@
     </div>
 
     <div class="small-box">
+    <!-- 點擊區 -->
       <a class="container" href="#">
         <p class="icon-title">海</p>
         <!-- 點擊圖片區 -->
@@ -87,6 +88,7 @@
     </div>
 
     <div class="small-box">
+    <!-- 點擊區 -->
       <a class="container" href="#">
         <p class="icon-title">海</p>
         <!-- 點擊圖片區 -->
@@ -102,6 +104,7 @@
     </div>
 
     <div class="small-box">
+    <!-- 點擊區 -->
       <a class="container" href="#">
         <p class="icon-title">カルチャー</p>
         <!-- 點擊圖片區 -->
