新增：float-card > 大圖區 ＋ 小圖區，兩區塊架構合併
-  合併 pic-large-float 和 pic-small-float 的 html 架構

--- a/marathon/float-card.html
+++ b/marathon/float-card.html
@@ -12,14 +12,33 @@
 </head>
 <body>
   <div class="card_trips">
-    <h3>旅行者</h3><small>能做什麼 旅行者能做什麼</small>
-    <a class="card_click" href="#">
-      <p class="icon_title">其他</p>
-      <img src="./asset 27.jpeg" alt="">
-      <p class="bold">優衣庫阿拉莫阿那店~與UTme一起捐贈給夏威夷食品銀行！限量設計“一起在夏威夷”系列~</p>
-      <p class="thin">UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
-        <span class="date">2022/01/28</span>
-      </p>
-    </a>
+    <!-- 大圖區 -->
+    <div class="large_box">
+      <h3>旅行者</h3><small>能做什麼 旅行者能做什麼</small>
+      <a class="card_click" href="#">
+        <p class="icon_title">其他</p>
+        <img src="./asset 27.jpeg" alt="">
+        <p class="bold">優衣庫阿拉莫阿那店~與UTme一起捐贈給夏威夷食品銀行！限量設計“一起在夏威夷”系列~</p>
+        <p class="thin">UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
+          <span class="date">2022/01/28</span>
+        </p>
+      </a>
+    </div>
+    <!-- 小圖區 -->
+    <div class="small_box">
+      <!-- 點擊區 -->
+      <a class="container" href="#">
+        <p class="icon-title">カルチャー</p>
+        <!-- 點擊圖片區 -->
+        <img src="asset 33.jpeg" alt="">
+        <!-- 點擊文字區 -->
+        <div class="text-area">
+          <p class="bold">POW! WOW! x ハワイアン航空　限定ロゴグッズ販売の収益が子供たちへの教育サポートに</p>
+          <p class="thin">
+            <span class="date">2022/08/12</span>
+          </p>
+        </div>
+      </a>
+    </div>
   </div>
 </html>
