--- a/marathon/float-card.html
+++ b/marathon/float-card.html
@@ -15,9 +15,12 @@
     <!-- 大圖區 -->
     <div class="large_box">
       <h3>旅行者</h3><small>能做什麼 旅行者能做什麼</small>
-      <a class="card_click" href="#">
+      <!-- 點擊區 -->
+      <a class="container" href="#">
         <p class="icon_title">其他</p>
+        <!-- 點擊圖片區 -->
         <img src="./asset 27.jpeg" alt="">
+        <!-- 點擊文字區 -->
         <p class="bold">優衣庫阿拉莫阿那店~與UTme一起捐贈給夏威夷食品銀行！限量設計“一起在夏威夷”系列~</p>
         <p class="thin">UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
           <span class="date">2022/01/28</span>
@@ -28,11 +31,11 @@
     <div class="small_box">
       <!-- 點擊區 -->
       <a class="container" href="#">
-        <p class="icon-title">カルチャー</p>
+        <p class="icon_title">カルチャー</p>
         <!-- 點擊圖片區 -->
         <img src="asset 33.jpeg" alt="">
         <!-- 點擊文字區 -->
-        <div class="text-area">
+        <div class="text_area">
           <p class="bold">POW! WOW! x ハワイアン航空　限定ロゴグッズ販売の収益が子供たちへの教育サポートに</p>
           <p class="thin">
             <span class="date">2022/08/12</span>
