新增：float-card > large box and small box ，set width
-  card_trips width: 960px;
-  large box and small box width: card_trips width 一半: 467px;
-  large box img width: 467px;
-  small box img width: 467px*50% => width: 50%

--- a/marathon/float-card.html
+++ b/marathon/float-card.html
@@ -7,6 +7,40 @@
   <title>float 卡片式</title>
   <link rel="stylesheet" href="../reset.css">
   <style>
+    .card_trips{
+      margin: 10px auto;
+      /* 960 = 10*2 + 3*2 + 934 */
+      border: green 3px solid;
+      padding: 10px;
+      width: 934px;
+    }
+    .card_trips .container{
+      text-decoration: none;
+    }
+    .container{
+      display: block;
+      width: 467px;
+    }
+    
+    .large_box, .small_box{
+      box-sizing: border-box;
+      background-color: #99f;
+      width: 467px;
+    }
+    .large_box{
+      background-color: #ccc;
+    }
+    /* 圖片 */
+    .large_box .container img{
+      padding: 10px 0;
+      width: 467px;
+      vertical-align: middle;
+    }
+    .small_box .container img{
+      padding: 10px 0;
+      width: 50%;
+      vertical-align: middle;
+    }
 
   </style>
 </head>
@@ -25,6 +59,12 @@
         <p class="thin">UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
           <span class="date">2022/01/28</span>
         </p>
+        <div class="text_area">
+          <p class="bold">優衣庫阿拉莫阿那店~與UTme一起捐贈給夏威夷食品銀行！限量設計“一起在夏威夷”系列~</p>
+          <p class="thin">UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
+            <span class="date">2022/01/28</span>
+          </p>
+        </div>
       </a>
     </div>
     <!-- 小圖區 -->
