新增：float-card > large box set css
- 大圖區設定 text_area ，padding 設定上下 10px
- 大圖區 text_area 內部的 bold 和 thin 之間的寬，用 calc 調整 20px 間距

--- a/marathon/float-card.html
+++ b/marathon/float-card.html
@@ -41,7 +41,22 @@
       width: 50%;
       vertical-align: middle;
     }
-
+    /* 文字 */
+    /* 大圖 */
+    .large_box .text_area{
+      background-color: #573;
+      display: flex;
+      justify-content: space-between;
+    }
+    
+    .large_box .text_area .bold, .large_box .text_area .thin, .large_box .text_area .date{
+      padding: 10px 0;
+      width: calc(50% - 10px);
+    }
+    .large_box .date{
+      display: block;
+    }
+    
   </style>
 </head>
 <body>
@@ -55,10 +70,6 @@
         <!-- 點擊圖片區 -->
         <img src="./asset 27.jpeg" alt="">
         <!-- 點擊文字區 -->
-        <p class="bold">優衣庫阿拉莫阿那店~與UTme一起捐贈給夏威夷食品銀行！限量設計“一起在夏威夷”系列~</p>
-        <p class="thin">UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
-          <span class="date">2022/01/28</span>
-        </p>
         <div class="text_area">
           <p class="bold">優衣庫阿拉莫阿那店~與UTme一起捐贈給夏威夷食品銀行！限量設計“一起在夏威夷”系列~</p>
           <p class="thin">UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
