--- a/marathon/flex-card.html
+++ b/marathon/flex-card.html
@@ -17,6 +17,9 @@
       flex-wrap: wrap;
       justify-content: space-between;
     }
+    .card_trips:nth-child(2n+1){
+      flex-direction: row-reverse;
+    }
     .large_box, .small_card{
       box-sizing: border-box;
       background-color: #99f;
@@ -105,40 +108,97 @@
     </div>
     <!-- 小圖主區塊 -->
     <div class="small_card">
-          <!-- 小圖區-カルチャー -->
-          <div class="small_box">
-            <!-- 點擊區 -->
-            <a class="container" href="#">
-              <p class="icon_title">カルチャー</p>
-              <!-- 點擊圖片區 -->
-              <img src="asset 33.jpeg" alt="">
-              <!-- 點擊文字區 -->
-              <div class="text_area">
-                <p class="bold">POW! WOW! x ハワイアン航空　限定ロゴグッズ販売の収益が子供たちへの教育サポートに</p>
-                <p class="thin">
-                  <span class="date">2022/08/12</span>
-                </p>
-              </div>
-            </a>
+      <!-- 小圖區-カルチャー -->
+      <div class="small_box">
+        <!-- 點擊區 -->
+        <a class="container" href="#">
+          <p class="icon_title">カルチャー</p>
+          <!-- 點擊圖片區 -->
+          <img src="asset 33.jpeg" alt="">
+          <!-- 點擊文字區 -->
+          <div class="text_area">
+            <p class="bold">POW! WOW! x ハワイアン航空　限定ロゴグッズ販売の収益が子供たちへの教育サポートに</p>
+            <p class="thin">
+              <span class="date">2022/08/12</span>
+            </p>
           </div>
+        </a>
+      </div>
 
-          <!-- 小圖區-sea -->
-          <div class="small_box">
-            <!-- 點擊區 -->
-            <a class="container" href="#">
-              <p class="icon_title">海</p>
-              <!-- 點擊圖片區 -->
-              <img src="asset 31.jpeg" alt="">
-              <!-- 點擊文字區 -->
-              <div class="text_area">
-                <p class="bold">Sustainable Coastlines Hawai‘i x Lanai TRANSIT HAWAII 共にハワイの海を守る活動を開始</p>
-                <p class="thin">
-                  <span class="date">2022/08/24</span>
-                </p>
-              </div>
-            </a>
+      <!-- 小圖區-sea -->
+      <div class="small_box">
+        <!-- 點擊區 -->
+        <a class="container" href="#">
+          <p class="icon_title">海</p>
+          <!-- 點擊圖片區 -->
+          <img src="asset 31.jpeg" alt="">
+          <!-- 點擊文字區 -->
+          <div class="text_area">
+            <p class="bold">Sustainable Coastlines Hawai‘i x Lanai TRANSIT HAWAII 共にハワイの海を守る活動を開始</p>
+            <p class="thin">
+              <span class="date">2022/08/24</span>
+            </p>
           </div>
+        </a>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="card_trips">
+    <!-- 大圖區 -->
+    <div class="large_box">
+      <h3>旅行者</h3><small>能做什麼 旅行者能做什麼</small>
+      <!-- 點擊區 -->
+      <a class="container" href="#">
+        <p class="icon_title">其他</p>
+        <!-- 點擊圖片區 -->
+        <img src="./asset 27.jpeg" alt="">
+        <!-- 點擊文字區 -->
+        <div class="text_area">
+          <p class="bold">優衣庫阿拉莫阿那店~與UTme一起捐贈給夏威夷食品銀行！限量設計“一起在夏威夷”系列~</p>
+          <p class="thin">UTme!“一起在夏威夷”系列在優衣庫阿拉莫阿納店與當地藝術家和公司合作啟動了 UTme!“一起”
+            <span class="date">2022/01/28</span>
+          </p>
         </div>
+      </a>
+    </div>
+    <!-- 小圖主區塊 -->
+    <div class="small_card">
+      <!-- 小圖區-カルチャー -->
+      <div class="small_box">
+        <!-- 點擊區 -->
+        <a class="container" href="#">
+          <p class="icon_title">カルチャー</p>
+          <!-- 點擊圖片區 -->
+          <img src="asset 33.jpeg" alt="">
+          <!-- 點擊文字區 -->
+          <div class="text_area">
+            <p class="bold">POW! WOW! x ハワイアン航空　限定ロゴグッズ販売の収益が子供たちへの教育サポートに</p>
+            <p class="thin">
+              <span class="date">2022/08/12</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <!-- 小圖區-sea -->
+      <div class="small_box">
+        <!-- 點擊區 -->
+        <a class="container" href="#">
+          <p class="icon_title">海</p>
+          <!-- 點擊圖片區 -->
+          <img src="asset 31.jpeg" alt="">
+          <!-- 點擊文字區 -->
+          <div class="text_area">
+            <p class="bold">Sustainable Coastlines Hawai‘i x Lanai TRANSIT HAWAII 共にハワイの海を守る活動を開始</p>
+            <p class="thin">
+              <span class="date">2022/08/24</span>
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
 
   </div>
 </body>
