新增：flex-card > 增加 small_box 資料*2
-  設定 small_box margin-bottom, 拉開下方 small_box 距離

--- a/marathon/flex-card.html
+++ b/marathon/flex-card.html
@@ -31,6 +31,7 @@
     }
     .small_box{
       width: calc(50% - 10px);
+      margin-bottom: 10px;
     }
 
     .card_trips .large_box .container{
@@ -112,12 +113,12 @@
       <div class="small_box">
         <!-- 點擊區 -->
         <a class="container" href="#">
-          <p class="icon_title">カルチャー</p>
+          <p class="icon_title">文化</p>
           <!-- 點擊圖片區 -->
-          <img src="asset 33.jpeg" alt="">
+          <img src="asset 29.png" alt="">
           <!-- 點擊文字區 -->
           <div class="text_area">
-            <p class="bold">POW! WOW! x ハワイアン航空　限定ロゴグッズ販売の収益が子供たちへの教育サポートに</p>
+            <p class="bold">「E Ulu A Paʻa」～ビショップ ミュージアム が年に一度のファンドレイジングを開催！～</p>
             <p class="thin">
               <span class="date">2022/08/12</span>
             </p>
@@ -137,6 +138,40 @@
             <p class="bold">Sustainable Coastlines Hawai‘i x Lanai TRANSIT HAWAII 共にハワイの海を守る活動を開始</p>
             <p class="thin">
               <span class="date">2022/08/24</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <!-- 小圖區-sea -->
+      <div class="small_box">
+        <!-- 點擊區 -->
+        <a class="container" href="#">
+          <p class="icon_title">海</p>
+          <!-- 點擊圖片區 -->
+          <img src="asset 32.jpeg" alt="">
+          <!-- 點擊文字區 -->
+          <div class="text_area">
+            <p class="bold">『世界海洋デー』とは～豊かな海の環境を守ろう～</p>
+            <p class="thin">
+              <span class="date">2022/08/08</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <!-- 小圖區-カルチャー -->
+      <div class="small_box">
+        <!-- 點擊區 -->
+        <a class="container" href="#">
+          <p class="icon_title">カルチャー</p>
+          <!-- 點擊圖片區 -->
+          <img src="asset 33.jpeg" alt="">
+          <!-- 點擊文字區 -->
+          <div class="text_area">
+            <p class="bold">POW! WOW! x ハワイアン航空　限定ロゴグッズ販売の収益が子供たちへの教育サポートに</p>
+            <p class="thin">
+              <span class="date">2022/08/12</span>
             </p>
           </div>
         </a>
@@ -200,6 +235,7 @@
       </div>
     </div>
 
+    
   </div>
 </body>
 </html>
