新增：flex-foot > 建立 foot 架構 > foot_bottom
foot_bottom 分作兩區塊，container and copy_right
container 放置 note, logo, social media 等資訊
copy_right 放置 版權內容

- foot_bottom:
  - foot_container:
     - foot_note
     - foot_logo
     - foot_social_Media

   - copy_right

--- a/marathon/flex-foot.html
+++ b/marathon/flex-foot.html
@@ -59,7 +59,26 @@
     </section>  
 
     <section class="foot_bottom">
+      <div class="foot_container">
+        <div class="foot_note">
+          <p></p>
+          <p></p>
+          <p></p>
+        </div>
+
+        <div class="foot_logo">
+
+        </div>
+
+        <div class="foot_social_Media">
+
+        </div>
+      </div>
       
+      <div class="copy_right">
+        <p></p>
+      </div>
+
     </section>
   </article>
 </body>
