新增：flex-foot > foot 架構 > foot_social_media
新增各個 social media 對應 class name

--- a/marathon/flex-foot.html
+++ b/marathon/flex-foot.html
@@ -70,11 +70,15 @@
 
         </div>
 
-        <div class="foot_social_Media">
-
+        <div class="foot_social_media">
+          <a href="#" class="tweet"></a>
+          <a href="#" class="instagram"></a>
+          <a href="#" class="facebook"></a>
+          <a href="#" class="youtube"></a>
+          <a href="#" class="line"></a>
         </div>
       </div>
-      
+
       <div class="copy_right">
         <p></p>
       </div>
