新增：flex-foot > 設置 .foot_bottom .foot_container, .foot_bottom .copy_right  容器寬度
刪除 foot_content > 無作用的 上右下左 設定
新增 foot_container 的內容呈現 flex, align-items: center;  交叉軸置中
新增 flex-grow = 1 將 foot_note, foot_logo, foot_social_media 均分寬度
新增 text-align: center 將 copy_right 內容 水平置中

--- a/marathon/flex-foot.html
+++ b/marathon/flex-foot.html
@@ -14,10 +14,6 @@
     }
     .foot_content{
       width: 960px;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      left: 0;
       margin: auto;
       display: flex;
       flex-wrap: wrap;
@@ -44,6 +40,7 @@
       background-color: #5aa;
       padding-top: 10px;
       padding-bottom: 10px;
+
     }
     .foot_bottom::before{
       content: "";
@@ -51,7 +48,19 @@
       display: block;
       border-bottom: #000 1px solid;
     }
-    
+    .foot_bottom .foot_container{
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+    .foot_bottom .foot_container .foot_note, .foot_bottom .foot_container .foot_logo, .foot_bottom .foot_container .foot_social_media{
+      flex-grow: 1;
+    }
+    .foot_bottom .copy_right{
+    width: 100%;
+    text-align: center;
+    }
   </style>
 </head>
 <body>
