新增：flex-foot > 設置 .foot_top .site_item .site_unit h3, p  字型 / 字體大小

--- a/marathon/flex-foot.html
+++ b/marathon/flex-foot.html
@@ -30,6 +30,15 @@
       display: block;
       text-decoration: none;
       padding-bottom: 10px;
+      line-height: 24px;
+
+    }
+    .foot_top .site_item .site_unit h3{
+      font-size: 20px;
+      font-weight: bold;
+    }
+    .foot_top .site_item .site_unit p{
+      font-size: 12px;
     }
 
     .foot_top .site_notice{
@@ -72,8 +81,6 @@
           <p>TOP</p>
         </a>
         <a href="#" class="site_unit">
-          <h3></h3>
-          <p></p>
         </a>
       </div>
       
