新增：flex-foot > 填入 .foot_top .site_item .site_unit “h3, p” 資料

--- a/marathon/flex-foot.html
+++ b/marathon/flex-foot.html
@@ -81,40 +81,38 @@
           <p>TOP</p>
         </a>
         <a href="#" class="site_unit">
+          <h3>マラマハワイとは</h3>
+          <p>About Mālama Hawaiʻi</p>
         </a>
       </div>
       
       <div class="site_item">
         <a href="#" class="site_unit">
-            <h3></h3>
-            <p></p>
+            <h3>旅行者にできること</h3>
+            <p>WHAT TRAVELERS CAN DO</p>
         </a>
         <a href="#" class="site_unit">
-          <h3></h3>
-          <p></p>
+          <h3>取組み紹介</h3>
+          <p>INITIATIVES</p>
         </a>
         <a href="#" class="site_unit">
-          <h3></h3>
-          <p></p>
+          <h3>関連映像</h3>
+          <p>MOVIES</p>
         </a>
       </div>
 
       <div class="site_item">
         <a href="#" class="site_unit">
-            <h3></h3>
-            <p></p>
+            <h3>コミュニティ紹介</h3>
+            <p>COMMUNITIES</p>
         </a>
         <a href="#" class="site_unit">
-          <h3></h3>
-          <p></p>
+          <h3>特集</h3>
+          <p>FEATURED</p>
         </a>
       </div>
       
       <div class="site_notice">
-        <a class="industry" href="#"></a>
-        <a class="ask" href="#"></a>
-        <a class="service" href="#"></a>
-        <a class="privacy" href="#"></a>
       </div>
     </section>  
 
