新增：flex-foot > 新增 超連結 class name: .out_link
前情提要：超連結已轉成 block
變更 .foot_top .site_item, .foot_top .site_notice 容器寬度，各 25%

新增 超連結 class name: .out_link , 用來裝飾每個超連結 (::after)
::after 的 display 預設 inline, 接在每個超連結之後, 使用 padding-left 空出"圖示放置區"
設置 background-image 將裝飾圖示視作背景圖片
設置 background-size 制定圖示放置區大小
設置 background-repeat 圖示不重複

--- a/marathon/flex-foot.html
+++ b/marathon/flex-foot.html
@@ -23,8 +23,8 @@
       background-color: #fa0;
       padding-bottom: 10px;
     }
-    .foot_top .site_item{
-      width: 20%;
+    .foot_top .site_item, .foot_top .site_notice{
+      width: 25%;
     }
     .foot_top .site_item .site_unit{
       display: block;
@@ -41,10 +41,20 @@
       font-size: 12px;
     }
 
-    .foot_top .site_notice{
-      width: 40%;
+    .site_notice .industry, .site_notice .ask, .site_notice .service, .site_notice .privacy{
+      display: block;
+      text-decoration: none;
+      margin-bottom: 10px;
+      font-size: 12px;
     }
-
+    .foot_top .site_notice .out_link::after{
+      content: '';
+      padding-left: 20px;
+      background-image: url("linkout.svg");
+      background-size: 16px 16px;
+      background-repeat: no-repeat;
+    }
+    
     .foot_bottom{
       background-color: #5aa;
       padding-top: 10px;
@@ -113,6 +123,10 @@
       </div>
       
       <div class="site_notice">
+        <a class="out_link industry" href="#">業界関係の方へ</a>
+        <a class="out_link ask" href="#">お問い合わせ</a>
+        <a class="out_link service" href="#">利用規約</a>
+        <a class="out_link privacy" href="#">プライバシーポリシー</a>
       </div>
     </section>  
 
