變更：flex-foot > 變更 .foot_bottom 設定, 調整裝飾線置適當位置
變更 foot_bottom 的 "padding-top 由 10px -> 0px", 讓偽類產出裝飾線段, 貼近 foot_bottom 上邊界
新增 foot_bottom::before 內，新增 padding-top 推出偽類與 foot_bottom 之間的空間

--- a/marathon/flex-foot.html
+++ b/marathon/flex-foot.html
@@ -57,15 +57,16 @@
     
     .foot_bottom{
       background-color: #5aa;
-      padding-top: 10px;
+      padding-top: 0px;
       padding-bottom: 10px;
-
-    }
+      
+     }
     .foot_bottom::before{
       content: "";
       width: 100%;
       display: block;
-      border-bottom: #000 1px solid;
+      border-top: #000 1px solid;
+      padding-top: 20px;
     }
     .foot_bottom .foot_container{
       width: 100%;
@@ -133,9 +134,9 @@
     <section class="foot_content foot_bottom">
       <div class="foot_container">
         <div class="foot_note">
-          <p></p>
-          <p></p>
-          <p></p>
+          <p>ハワイ州</p>
+          <p>レスポンシブル・ツーリズム</p>
+          <p>情報サイト</p>
         </div>
 
         <div class="foot_logo">
