新增：flex-foot > .copy_right 填入資料

--- a/marathon/flex-foot.html
+++ b/marathon/flex-foot.html
@@ -90,6 +90,8 @@
     .foot_bottom .copy_right{
     width: 100%;
     text-align: center;
+    font-size: 12px;
+    padding: 10px 0;
     }
   </style>
 </head>
@@ -173,7 +175,7 @@
       </div>
 
       <div class="copy_right">
-        <p></p>
+        <p>©Hawai‘i Tourism Japan All rights reserved.</p>
       </div>
 
     </section>
