新增：flex-main > 新增 nav 架構
- nav_bar:
  - intro_link    > 超連結 ＋ 文字變色處理
  - nav_list      > 超連結＊5
  - business-link > 超連結 ＋ 偽選取器

--- a/marathon/flex-main.html
+++ b/marathon/flex-main.html
@@ -38,12 +38,26 @@
         <span></span>
         <span></span>
       </div>
-
     </header>
 
     <nav class="nav_bar">
+      <div class="intro_link">
+        <a href="#"><span></span></a>
+      </div>
 
+      <div class="nav_list">
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+      </div>
+
+      <div class="business-link">
+        <a href=""></a>
+      </div>
     </nav>
+
     <div class="main_title_group">
 
     </div>
