新增：flex-main > 新增 main_title_group 架構
- main_think
- main_slogan

活動的 想法 / 創造 > 口號
想法 / 創造 -> h2
口號 -> h3

--- a/marathon/flex-main.html
+++ b/marathon/flex-main.html
@@ -59,7 +59,15 @@
     </nav>
 
     <div class="main_title_group">
+      <h2 class="main_think">
+        <span></span>
+        <span></span>
+      </h2>
 
+      <h3 class="main_slogan">
+        <span></span>
+        <span></span>
+      </h3>
     </div>
 
     <div class="main_visul">
