新增：flex-main > 新增 main_visul 架構
- main_visul_pic   > 圖示
- main_visul_text  > visul_text_icon + text_content
- main_visul_cap   > 定位在 main_visul_pic 左上角
- visul_cap_link   > main_visul_cap 內容可以點擊，點擊的內容使用一層超連結包起來

--- a/marathon/flex-main.html
+++ b/marathon/flex-main.html
@@ -71,7 +71,39 @@
     </div>
 
     <div class="main_visul">
+      <div class="main_visul_pic">
+        <img src="" alt="main_visul_pic">
+      </div>
 
+      <div class="main_visul_text">
+        <div class="main_visul_text_icon">
+          <img src="" alt="main_visul_text_icon">
+        </div>
+        
+        <p class="text_content">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </p>
+      </div>
+
+      <div class="main_visul_cap">
+        <a href="" class="visul_cap_link">
+          <div class="visul_cap_link_pic">
+            <img src="" alt="visul_cap_link_pic">
+          </div>
+          <div class="visul_cap_link_text">
+            <p>
+              <span></span>
+              <span></span>
+            </p>            
+          </div>
+        </a>
+      </div>
     </div>
   </div>  
 </body>
