新增：flex-main > 填入 header 資料
- 藉由 1px, absolute (使物件不佔空間）, overflow: hidden; 將 h1(或其他文字) 藏在 logo 圖片底下

--- a/marathon/flex-main.html
+++ b/marathon/flex-main.html
@@ -6,37 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>main</title>
   <link rel="stylesheet" href="../reset.css">
-  <style>
-
-  </style>
+  <link rel="stylesheet" href="flex-main.css">
 </head>
 <body>
   <div class="container">
     <header>
       <div class="search">
         <a href="#" class="serch_icon">
-          <img src="" alt="">
+          <img src="./search.svg" alt="serch_icon">
         </a>
 
         <p class="search_text">
-          <span></span>
-          <span></span>
-          <span></span>
+          <span>ハワイ州</span>
+          <span>レスポンシブル・ツーリズム</span>
+          <span>情報サイト</span>
         </p>
       </div>
 
       <div class="main_logo">
-        <a href="" class="main_logo_text">
+        <a href="#" class="main_logo_pic">
           <h1>
-
-            <img src="" alt="main_logo">
+            <span>malama hawaii</span> 
+            <img src="./main_logo.png" alt="main_logo">
           </h1>
         </a>
       </div>
 
       <div class="signature">
-        <span></span>
-        <span></span>
+        <span>an initiative from</span>
+        <img src="./initiative.svg" alt="signature">
       </div>
     </header>
 
