新增：flex-main > 填入 nav 資料
- 變更 intro_link, 強化文字內容使用 h2; 超連結連結到 "什麼是夏威夷馬拉松？"，用 h2 強化語意

--- a/marathon/flex-main.html
+++ b/marathon/flex-main.html
@@ -40,19 +40,22 @@
 
     <nav class="nav_bar">
       <div class="intro_link">
-        <a href="#"><span></span></a>
+        <a href="#">
+          <!-- 什麼是夏威夷馬拉松？ -->
+          <h2 class="intro_text"><span>マラマハワイとは</span></h2>
+        </a>
       </div>
 
       <div class="nav_list">
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+        <a href="#">旅行者にできること</a>
+        <a href="#">取組み紹介</a>
+        <a href="#">関連映像</a>
+        <a href="#">コミュニティ</a>
+        <a href="#">特集</a>
       </div>
 
       <div class="business-link">
-        <a href=""></a>
+        <a href="#">業界関係の方へ</a>
       </div>
     </nav>
 
