新增：flex-main > 填入 main_title_group, main_visul 資料
- text_content 設置一層 div 包裹 p 和 span ，日後增加文字內容，便於處理

--- a/marathon/flex-main.html
+++ b/marathon/flex-main.html
@@ -61,46 +61,48 @@
 
     <div class="main_title_group">
       <h2 class="main_think">
-        <span></span>
-        <span></span>
+        <span>ハワイを想うことは、</span>
+        <span>ハワイの未来を創ること。</span>
       </h2>
 
       <h3 class="main_slogan">
-        <span></span>
-        <span></span>
+        <span>Re-Imagine</span>
+        <span>Hawai‘i</span>
       </h3>
     </div>
 
     <div class="main_visul">
       <div class="main_visul_pic">
-        <img src="" alt="main_visul_pic">
+        <img src="./main.jpg" alt="main_visul_pic">
       </div>
 
       <div class="main_visul_text">
         <div class="main_visul_text_icon">
-          <img src="" alt="main_visul_text_icon">
+          <img src="./scroll_more.svg" alt="main_visul_text_icon">
         </div>
-        
-        <p class="text_content">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </p>
+
+        <div class="texr_content">  
+          <p>
+            <span>美しい楽園ハワイは、永遠ではありません。</span>
+            <span>山から海まで、ハワイに生きる美しい自然や文化に</span>
+            <span>「マラマ = 思いやりの心」を持って接すること。</span>
+            <span>レスポンシブル・ツーリズムは、そんな思いやりの心を</span>
+            <span>旅の中で実践していく、新しい観光のカタチです。</span>
+            <span>ハワイが何十年後も、何百年後も、素晴らしい楽園であるよう</span>
+            <span>旅行者のみなさんだからできることがあります。</span>
+          </p>
+        </div>  
       </div>
 
       <div class="main_visul_cap">
         <a href="" class="visul_cap_link">
           <div class="visul_cap_link_pic">
-            <img src="" alt="visul_cap_link_pic">
+            <img src="./botanicGarden.jpg" alt="visul_cap_link_pic">
           </div>
           <div class="visul_cap_link_text">
             <p>
-              <span></span>
-              <span></span>
+              <span>PICK UP</span>
+              <span>フォーシーズンズ リゾート ラナイ、プラマ・ラナイと共同で絶 …</span>
             </p>            
           </div>
         </a>
