新增：flex-main > 設定 header > .search css
- header 新增 class name: header, 便於選取器選取
- .header display: flex; 子物件: 橫排 & 轉型成 block
- :nth-child(n) , 子層都是 div , search, main_logo, signature 都會被選取到, 更改共同項目-寫在裡面

- .serch display: flex; 子物件: 橫排 & 轉型成 block; 超連結不需要轉成 block, 已經被強制轉成 block
- align-self, 自訂圖片容器對齊位置
- margin-right, 區隔圖片容器和文字容器, 猶於圖片區塊是一個超連結, 使用 margin 推開, 空白處不會出現點擊效果

--- a/marathon/flex-main.html
+++ b/marathon/flex-main.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <header>
+    <header class="header">
       <div class="search">
         <a href="#" class="serch_icon">
           <img src="./search.svg" alt="serch_icon">
