新增：flex-main > 設定 header > .signature css
- .header 子物件水平置中
- 刪除 :nth-child(n) , 用 class name 取代
- text-align 改變文字對齊方向

--- a/marathon/flex-main.html
+++ b/marathon/flex-main.html
@@ -34,7 +34,9 @@
 
       <div class="signature">
         <span>an initiative from</span>
-        <img src="./initiative.svg" alt="signature">
+        <a href="#" class="initiative">
+          <img src="./initiative.svg" alt="signature">
+        </a>
       </div>
     </header>
 
