新增：flex-main > 設定 .main_visul > .main_visul_text
- 設定文字 icon 置放位置, padding-top and padding-bottom
- 用 flex，改變 span 為 block; 使每個 span 都有獨自空間
- -webkit-writing-mode and writing-mode 調整文字書寫方式
- margin-right and margin-left 製造出文字區塊的置中效果

--- a/marathon/flex-main.html
+++ b/marathon/flex-main.html
@@ -97,7 +97,7 @@
       </div>
 
       <div class="main_visul_cap">
-        <a href="" class="visul_cap_link">
+        <a href="#" class="visul_cap_link">
           <div class="visul_cap_link_pic">
             <img src="./botanicGarden.jpg" alt="visul_cap_link_pic">
           </div>
