新增： 監聽鍵盤事件 playHandler
- 檢視事件內容, 每個鍵盤按鈕回應的 KeyCode 和 Key

--- a/ JS30/01 - Drum Kit/keyboard_start.html
+++ b/ JS30/01 - Drum Kit/keyboard_start.html
@@ -60,7 +60,16 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+(function(){
 
+  window.addEventListener('keydown', playHandler)
+
+  function playHandler(e){
+    console.log(e);
+
+  }
+  
+})()
 </script>
 
 
