變更： e.KeyCode to e.keyCode
- 注意 keyCode 的 k 大小寫
- console 檢視輸出值

--- a/ JS30/01 - Drum Kit/keyboard_start.html
+++ b/ JS30/01 - Drum Kit/keyboard_start.html
@@ -65,7 +65,17 @@
   window.addEventListener('keydown', playHandler)
 
   function playHandler(e){
-    console.log(e);
+    // console.log(e);
+
+    // play music
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+
+    // dom style
+
+    const dom = document.querySelector(`div[data-key="${e.keyCode}"]`);
+
+    console.log(audio, dom);
+    // console.log("1");
 
   }
   
