新增： 按下鍵盤後，發出的聲音 改變字區塊樣式
- audio.play() 播放音效
- dom 的 class 加上 playing
- 使用 playing 達成 css 內的 class 設定 (.playing), 即改變字區塊樣式

--- a/ JS30/01 - Drum Kit/keyboard_start.html
+++ b/ JS30/01 - Drum Kit/keyboard_start.html
@@ -69,10 +69,12 @@
 
     // play music
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    audio.play();
 
     // dom style
 
     const dom = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    dom.classList.add("playing");
 
     console.log(audio, dom);
     // console.log("1");
