--- a/ JS30/01 - Drum Kit/keyboard_start.html
+++ b/ JS30/01 - Drum Kit/keyboard_start.html
@@ -69,13 +69,13 @@
 
     // play music
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    audio.play();
+    if(audio) audio.play();
 
     // dom style
 
     const dom = document.querySelector(`div[data-key="${e.keyCode}"]`);
-    dom.classList.add("playing");
-
+    if(dom) dom.classList.add("playing");
+     
     console.log(audio, dom);
     // console.log("1");
 
