新增： 按下按鍵後，馬上發出聲音 久按按鈕，產出連續聲音
- audio.currentTime = 0, 觸發按下按鈕，即時撥出聲音. 解決連續按按鈕，聲音未能即時發出。

--- a/ JS30/01 - Drum Kit/keyboard_start.html
+++ b/ JS30/01 - Drum Kit/keyboard_start.html
@@ -69,7 +69,10 @@
 
     // play music
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    if(audio) audio.play();
+    if(audio) {
+      audio.currentTime = 0;
+      audio.play();
+    }
 
     // dom style
 
