變更： 設定變數取代常出現的東西
- 變數記的東西可以是值, function, DOM 等
- 程式簡潔
- 效能提升
- 設定 document 時，用到相同功能，網頁要再讀一次; 用"變數"取代經常出現的 document, 網頁讀到變數, 直接把對應的值帶入

--- a/ JS30/click.html
+++ b/ JS30/click.html
@@ -23,9 +23,15 @@
 <body>
   <div class="btn">hi</div>
 <script>
+  /*
   document.querySelector('.btn').addEventListener('click', function () {
     document.querySelector('.btn').innerHTML = 'tsao'
   });
+  */
+  const btn = document.querySelector('.btn');
+  btn.addEventListener('click', function () {
+    btn.innerHTML = 'oast';
+  })
 </script>
 </body>
 </html>
