新增 object 和 array 差異
- Object; key 和 value 的概念, 無順序
- Array; 位址, 有順序, 0, 1, 2...((ex 圖片輪播

--- a/ JS30/click.html
+++ b/ JS30/click.html
@@ -32,6 +32,16 @@
   btn.addEventListener('click', function () {
     btn.innerHTML = 'oast';
   })
+
+  var person = {
+    name: 'tsao',
+    sex: 'male'
+  }
+ 
+  console.log(person.name);
+
+  var namelist =['Mary','Tom','Lucas']
+  console.log(namelist[0]);
 </script>
 </body>
 </html>
