新增：function Hoisting
- function 經 JS Hoisting, 執行方法 ( age(16) 或 hi(‘Tom’) ) 寫在 function 的前後，都可以執行！
- 一旦 function 作為一變數值; function作為一變數值賦值給變數 (如 37 行)，在 35 行顯示 gender is not a function

--- a/ JS30/hoisting.html
+++ b/ JS30/hoisting.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script>
-    // 變數的 Hoisting
+    // 變數 Hoisting
     var car = 'mazada';
     console.log(car);
 
@@ -18,6 +18,26 @@
     var sportcar;
     console.log(sportcar);
     spotcar = 'Lamborghini';
+    console.log('------------');
+
+    // 函式 Hoisting
+    function hi(name) {
+      console.log(`hi ${name}`);
+    }
+    hi('Tom');
+
+    age(16);
+    function age(years) {
+      console.log(`${years} old`);
+    }
+
+    console.log(gender); // undefined -> gender 是一變數
+    gender('male'); // gender is not a function
+
+    var gender = function (sex) {
+      console.log(sex);
+    }
+
 
   </script>
 </body>
