變更: 調整 執行方法 gender('male') 位置, output: male
- function 作為一變數值，需注意定義變數的位置 ((變數 Hoisting
- 將執行方法 gender('male') 置於定義變數的下方，便可以得到輸出 male

--- a/ JS30/hoisting.html
+++ b/ JS30/hoisting.html
@@ -32,11 +32,13 @@
     }
 
     console.log(gender); // undefined -> gender 是一變數
-    gender('male'); // gender is not a function
+    // gender('male'); // gender is not a function
 
     var gender = function (sex) {
       console.log(sex);
     }
+    console.log(gender); // ƒ (sex) {... -> gender 內容為 function
+    gender('male'); // male
 
 
   </script>
