新增： let, const hoisting
- 與 var 不同的是，let 和 const 的變數沒有初始值
- ReferenceError
- let 和 const 需要給予 ”initialized“

--- a/ JS30/hoisting.html
+++ b/ JS30/hoisting.html
@@ -40,6 +40,11 @@
     console.log(gender); // ƒ (sex) {... -> gender 內容為 function
     gender('male'); // male
 
+    // let, const Hoisting
+    console.log(animal);
+    // let animal = 'cat';
+    const animal = 'cat';
+
 
   </script>
 </body>
