新增： $ 至於 JQuery 之前
- NG: $ is not defined
- 撰寫 $ 功能設定，皆放置 CDN 之後，程式方能吃到 CDN 的設定

--- a/ JS30/JQuery/index.html
+++ b/ JS30/JQuery/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
   
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js">
-
+  <script>
+    console.log($);
   </script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js">
+  </script>
+
 </body>
 </html>
