新增： JQuery 起手式
- $ 功能設定，皆放置 CDN 之後，程式方能吃到 CDN 的設定
- 舊式 $ 寫法：$(document).ready(function ...
- 現在 $ 寫法：$(function () {...
- 舊式 & 現在式都能使用，之後使用 新式寫法

--- a/ JS30/JQuery/index.html
+++ b/ JS30/JQuery/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   
-  <script>
-    console.log($);
-  </script>
+  
   <script src="https://code.jquery.com/jquery-3.6.0.min.js">
   </script>
+  <script src="all.js">
 
+  </script>
 </body>
 </html>
