新增： 不同按鈕，觸發不同效果

--- a/ JS30/JQuery/index.html
+++ b/ JS30/JQuery/index.html
@@ -23,10 +23,10 @@
     background-color: #fa0;
     margin: 10px auto;
   }
-  .box:hover
+  /* .box:hover
   {
     background-color: #f00;
-  }
+  } */
 
   .btn{
     background: #ddd;
@@ -42,7 +42,9 @@
 <body>
   <div class="wrap">
     <div class="box"></div>
-    <div class="btn">點擊</div>
+    <div class="btn click">點擊</div>
+    <div class="btn color">換色</div>
+
   </div>
   
   
