--- a/ JS30/JQuery/index.html
+++ b/ JS30/JQuery/index.html
@@ -22,6 +22,7 @@
     height: 100px;
     background-color: #fa0;
     margin: 10px auto;
+    transition: 1.2s background-color;
   }
   /* .box:hover
   {
@@ -38,10 +39,13 @@
     padding-top: 5px;
     padding-bottom: 5px;
   }
+  .bg-red{
+    background-color: #f00;
+  }
 </style>
 <body>
   <div class="wrap">
-    <div class="box"></div>
+    <div class="box bg-red"></div>
     <div class="btn click">點擊</div>
     <div class="btn color">換色</div>
 
