--- a/ JS30/JQuery/index.html
+++ b/ JS30/JQuery/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <style>
   *{
@@ -48,6 +52,7 @@
     <div class="box bg-red"></div>
     <div class="btn click">點擊</div>
     <div class="btn color">換色</div>
+    <div class="btn animate">animate</div>
 
   </div>
   
