--- a/ JS30/JQuery/index.html
+++ b/ JS30/JQuery/index.html
@@ -28,6 +28,13 @@
     margin: 10px auto;
     transition: 1.2s background-color;
   }
+  .small{
+    width: 50px;
+    height: 50px;
+    margin: 10px auto;
+    text-align: center;
+    line-height: 50px;
+  }
   /* .box:hover
   {
     background-color: #f00;
@@ -50,6 +57,8 @@
 <body>
   <div class="wrap">
     <div class="box bg-red"></div>
+    <div class="box small">click</div>
+
     <div class="btn click">點擊</div>
     <div class="btn color">換色</div>
     <div class="btn animate">animate</div>
