新增： randomuser + JQuery ajax 取資料
- 資料：https://randomuser.me/
- 將取得資料 賦值到變數 result

--- a/ JS30/JQuery/index.html
+++ b/ JS30/JQuery/index.html
@@ -60,8 +60,8 @@
     margin-top: 10px;
     background-color: #000;
   }
-  .data span{
-    display: block;
+  .data p{
+    margin-bottom: 3px;
   }
 </style>
 <body>
@@ -75,7 +75,13 @@
   </div>
   <div class="line"></div>
   <div class="data">
-    <span data-set="name"></span>
+    <p>姓名：<span data-set="name"></span></p> 
+    <p>E-mail：<span data-set="email"></span></p> 
+    <p>電話：<span data-set="tel"></span></p> 
+    <div class="pic">
+      <img src="" alt="">
+    </div>
+
     <span data-set="like"></span>
 
   </div>
