新增： .attr(),  JQuery  用來輸出圖片的方法

--- a/ JS30/JQuery/index.html
+++ b/ JS30/JQuery/index.html
@@ -79,7 +79,7 @@
     <p>E-mail：<span data-set="email"></span></p> 
     <p>電話：<span data-set="tel"></span></p> 
     <div class="pic">
-      <img src="" alt="">
+      <img src="" alt="" data-set="img">
     </div>
 
     <span data-set="like"></span>
